k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  gitops
  labels:
    env: dev
    app: pfe-gitops-demo
