k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-gitops-demo
  namespace: gitops
  labels:
    app: pfe-gitops-demo
    env: dev
    type: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfe-gitops-demo
      env: dev
      type: app
  template:
    metadata:
      labels:
        app: pfe-gitops-demo
        env: dev
        type: app
    spec:
      containers:
      - name: pfe-gitops-demo-app
        image: pfegitops.azurecr.io/pfe-gitops-demo:1.54
        imagePullPolicy: Always
        volumeMounts:
          - name:  app-config-volume
            mountPath:  /config/application.yaml
            subPath: application.yaml
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "200m"
            memory: "384Mi"
            ephemeral-storage: "2Gi"
        # securityContext:
        #   runAsUser: 10001
        #   runAsGroup: 10001
        #   privileged: false
        #   readOnlyRootFilesystem: true
        #   allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /app/actuator/health/liveness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          failureThreshold: 5
          periodSeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /app/actuator/health/readiness
            port: 8080
            scheme: HTTP
          periodSeconds: 15
      imagePullSecrets:
        - name:  acr-pull-secret
      volumes:
        - name:  app-config-volume
          configMap:
            name: pfe-app-config
            items:
              - key: application.yaml
                path: application.yaml
