k8s/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pfe-gitops-db
  namespace: gitops
  labels:
    app: pfe-gitops-db
    env: dev
    type: db
spec:
  replicas: 1
  serviceName: pfe-gitops-db-svc
  selector:
    matchLabels:
      app: pfe-gitops-db
      env: dev
      type: db
  template:
    metadata:
      labels:
        app: pfe-gitops-db
        env: dev
        type: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: pfe-gitops-db
          image: mysql:5.7
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command: ["mysqladmin", "-u", "root", "-p$MYSQL_ROOT_PASSWORD", "ping", "&>", "/dev/null", "||", "exit", "1"]           
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["mysql", "-u", "root", "-p$MYSQL_ROOT_PASSWORD", "-e", "SELECT 1"]
            initialDelaySeconds: 10
            periodSeconds: 2
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "2Gi"
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - name: tcp
              protocol: TCP
              containerPort: 3306
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: pfe-gitops-db-data
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
        - name: pfe-gitops-db-data
          persistentVolumeClaim:
            claimName: pfe-gitops-db-data

  # volumeClaimTemplates:
  #  - metadata:
  #      name: pfe-gitops-db-data
  #      namespace: gitops
  #      labels:
  #        app: pfe-gitops-demo
  #        env: dev
  #    spec:
  #      storageClassName: default
  #      accessModes:
  #        - ReadWriteOnce
  #      resources:
  #        requests:
  #          storage: 1Gi
