k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfe-gitops-db-svc
  labels:
    app: pfe-gitops-db
    env: dev
spec:
  clusterIP: None
  selector:
    app: pfe-gitops-db
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
