k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pfe-gitops-app-ingress
  namespace: gitops
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: pfe-gitops-app.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: pfe-gitops-app-lb
            port:
              number: 8080
      - path: /actuator/health
        pathType: Prefix
        backend:
          service:
            name: pfe-gitops-app-lb
            port:
              number: 8080
  tls:
  - hosts:
    - pfe-gitops-app.eastus.cloudapp.azure.com
    secretName: tls-secret
