k8s/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-prometheus-alertmanager-ingress
  namespace: monitoring
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: pfe-gitops-devsecops.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /grafana(.*)
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 9090
      - path: /prometheus(.*)
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
      - path: /alertmanager(.*)
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
  tls:
  - hosts:
    - pfe-gitops-devsecops.eastus.cloudapp.azure.com
    secretName: tls-secret
